MND-216 fixed z-index for Cookie popup

--- a/src/assets/styles/media/_media-home.scss
+++ b/src/assets/styles/media/_media-home.scss
@@ -468,6 +468,9 @@
     }
 }
 @media only screen and (max-width: 768px) {
+    .Cookie--blood-orange {
+        left: 54px !important;
+    }
     .container {
         padding: 0 54px;
     }
@@ -669,6 +672,9 @@
     }
 }
 @media only screen and (max-width: 576px) {
+    .Cookie--blood-orange {
+      left: 16px !important;
+    }
     .sec-title {
         line-height: 1.2;
     }
